Fixed z-index so help is topmost. Closes #64

--- a/css/style.css
+++ b/css/style.css
@@ -1021,7 +1021,7 @@ details li, .details li {
   bottom: 0;
   height: 100%;
   width: 100%;
-  z-index: 9999;
+  z-index: 99999;
 
   background: #000;
   background: rgba(0,0,0,0.85);
